--- a/package.json
+++ b/package.json
@@ -1,21 +1,87 @@
 {
-  "name": "rating-api",
-  "version": "1.3.5",
-  "description": "AKS Hackfest Rating api",
-  "author": "Joey Schluchter <jschluchter@gmail.com>",
+  "name": "system-i",
+  "version": "0.0.0",
   "scripts": {
-    "start": "node ./bin/www"
+    "ng": "ng",
+    "config": "node set-env.js",
+    "start": "ng serve",
+    "build": "ng build",
+    "production": "ng build --prod ---aot",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "async": "^2.6.0",
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "dotenv": "^4.0.0",
-    "express": "^4.17.1",
-    "hbs": "~4.0.1",
-    "mongoose": "^4.13.8",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "~11.2.7",
+    "@angular/common": "~11.2.7",
+    "@angular/compiler": "~11.2.7",
+    "@angular/core": "~11.2.7",
+    "@angular/forms": "~11.2.7",
+    "@angular/localize": "~11.2.7",
+    "@angular/platform-browser": "~11.2.7",
+    "@angular/platform-browser-dynamic": "~11.2.7",
+    "@angular/router": "~11.2.7",
+    "@aws-amplify/core": "^4.2.7",
+    "@aws-amplify/ui-angular": "^1.0.22",
+    "@handsontable/angular": "^9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngrx/effects": "^11.1.0",
+    "@ngrx/store": "^11.1.0",
+    "@ngrx/store-devtools": "^11.1.0",
+    "@swimlane/ngx-charts": "^18.0.1",
+    "amazon-cognito-identity-js": "^5.1.0",
+    "angular-notifier": "^9.1.0",
+    "angular2-notifications": "^9.0.0",
+    "aws-amplify": "^4.2.7",
+    "aws-amplify-angular": "^6.0.9",
+    "aws-cron-parser": "^1.1.11",
+    "aws-sdk": "^2.968.0",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^3.5.0",
+    "cron-parser": "^3.5.0",
+    "cron-validator": "^1.2.1",
+    "cronstrue": "^1.115.0",
+    "d3": "^7.0.0",
+    "handsontable": "^10.0.0",
+    "html2canvas": "^1.3.2",
+    "jsdoc": "^3.6.7",
+    "jszip": "^3.7.1",
+    "moment": "^2.29.1",
+    "ng-multiselect-dropdown": "^0.3.4",
+    "ngx-order-pipe": "^2.1.1",
+    "ngx-pagination": "^5.0.0",
+    "ngx-papaparse": "^5.0.0",
+    "ngx-spinner": "^11.0.1",
+    "ngx-toastr": "^14.1.0",
+    "path-parse": "^1.0.7",
+    "pdfmake": "^0.2.2",
+    "rxjs": "~6.6.0",
+    "tar": "^6.1.11",
+    "tslib": "^2.0.0",
+    "url-parse": "^1.5.3",
+    "uuid": "^8.3.2",
+    "zone.js": "~0.11.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular/cli": "~11.2.6",
+    "@angular/compiler-cli": "~11.2.7",
+    "@types/d3": "^6.7.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.20.10",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.5"
   }
 }
